--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
     "v-mask": "^2.2.3",
     "view-design": "^4.4.0",
     "vue": "^2.6.11",
